exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #0`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="active capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mb-3 pt-0">
        <table class="general-table pb-3 table">
          <tbody>
            <tr>
              <td class="smallbold">URL</td>
              <td>http://httpbin.org/post</td>
            </tr>
            <tr>
              <td class="smallbold">Request Method</td>
              <td>
                <span class="d-flex text-left align-items-center">POST</span>
              </td>
            </tr>
            <tr>
              <td class="smallbold">Status Code</td>
              <td><span class="badge badge-success">200</span></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #1`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="heading">
                <td class="header-name"></td>
              </tr>
              <tr class="d-none">
                <td class="header-name"></td>
                <td></td>
                <td></td>
              </tr>
              <tr class="">
                <td class="header-name">Host</td>
                <td class="header-original">httpbin.org</td>
              </tr>
              <tr class="">
                <td class="header-name">User-Agent</td>
                <td class="header-original">curl/7.64.1</td>
              </tr>
              <tr class="">
                <td class="header-name">Accept</td>
                <td class="header-original">*/*</td>
              </tr>
              <tr class="">
                <td class="header-name">Proxy-Connection</td>
                <td class="header-original">Keep-Alive</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">application/json</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">14</td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #2`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="active capitalize" data-role="tab-headers"
          >headers</a
        ><a href="#" class="capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <section class="request mt-2">
          <table class="header-table table table-striped">
            <tbody>
              <tr class="heading">
                <td class="header-name"></td>
              </tr>
              <tr class="d-none">
                <td class="header-name"></td>
                <td></td>
                <td></td>
              </tr>
              <tr class="">
                <td class="header-name">Date</td>
                <td class="header-original">Wed, 26 Feb 2020 15:22:46 GMT</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Type</td>
                <td class="header-original">application/json</td>
              </tr>
              <tr class="">
                <td class="header-name">Content-Length</td>
                <td class="header-original">464</td>
              </tr>
              <tr class="">
                <td class="header-name">Connection</td>
                <td class="header-original">keep-alive</td>
              </tr>
              <tr class="">
                <td class="header-name">Server</td>
                <td class="header-original">gunicorn/19.9.0</td>
              </tr>
              <tr class="">
                <td class="header-name">Access-Control-Allow-Origin</td>
                <td class="header-original">*</td>
              </tr>
              <tr class="">
                <td class="header-name">Access-Control-Allow-Credentials</td>
                <td class="header-original">true</td>
              </tr>
            </tbody>
          </table>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #3`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-1qn2w5c-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">1</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">{"foo": "bar"}</pre>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #4`] = `
<div
  data-role="log-details-modal"
  class="modal-dialog modal-lg flow-detail"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure Data</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <nav class="nav-tabs nav-tabs-sm">
        <a href="#" class="capitalize" data-role="tab-general">general</a
        ><a href="#" class="capitalize" data-role="tab-headers">headers</a
        ><a href="#" class="active capitalize" data-role="tab-body">body</a>
      </nav>
      <div class="text-center mt-3 mb-2 position-relative">
        <button
          type="button"
          class="ant-btn d-flex position-absolute right-0 ant-btn-primary ant-btn-sm"
        >
          <span>Secure this payload</span>
        </button>
        <div role="group" class="btn-group">
          <button
            type="button"
            data-role="select-request-phase"
            class="capitalize btn btn-outline btn-sm"
          >
            request</button
          ><button
            type="button"
            data-role="select-response-phase"
            class="active capitalize btn btn-primary-light btn-sm"
          >
            response
          </button>
        </div>
        <hr class="my-3 p-0" />
      </div>
      <div class="mt-3 pt-0">
        <div class="mb-3" data-role="log-payload-body-diff">
          <div class="diffsnippet">
            <table class="css-1qn2w5c-diff-container">
              <tbody>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">1</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">{</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">2</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  "args": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">3</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
  "data": "{\\"foo\\": \\"bar\\"}", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">4</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  "files": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">5</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  "form": {}, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">6</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  "headers": {</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">7</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "Accept": "*/*", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">8</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "Content-Length": "14", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">9</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "Content-Type": "application/json", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">10</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "Host": "httpbin.org", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">11</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "Proxy-Connection": "Keep-Alive", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">12</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "User-Agent": "curl/7.64.1", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">13</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
    "X-Amzn-Trace-Id": "Root=1-5e568d46-121257eeb4ab060a1c8591c0"</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">14</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  }, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">15</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  "json": {</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">16</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">    "foo": "bar"</pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">17</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">  }, </pre>
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">18</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
  "origin": "46.219.215.255", </pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">19</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">
  "url": "http://httpbin.org/post"</pre
                    >
                  </td>
                </tr>
                <tr class="css-1j7ahnq-line">
                  <td class="css-1crcoip-gutter css-1v6kodh-diff-removed">
                    <pre class="css-h84nzi-line-number">20</pre>
                  </td>
                  <td
                    class="css-1crcoip-gutter css-1klnsbn-empty-gutter css-1v6kodh-diff-removed"
                  >
                    <pre class="css-h84nzi-line-number"></pre>
                  </td>
                  <td class="css-175r96w-marker css-1v6kodh-diff-removed">
                    <pre>-</pre>
                  </td>
                  <td class="css-vl0irh-content css-1v6kodh-diff-removed">
                    <pre class="css-o1u8iu-content-text">}</pre>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #5`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><span
              ><span id="popoverid_1"
                ><i class="fa-info-circle fas"></i
              ></span> </span></sup
          >or Reveal<sup
            ><span
              ><span id="popoverid_2"
                ><i class="fa-info-circle fas"></i
              ></span> </span
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input name="isGoing" type="checkbox" readonly="" />
                  <div
                    title="$.foo"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    foo: bar
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-5 text-center">
              <button
                type="button"
                disabled=""
                data-role="select-secure-payload"
                class="button-next btn btn-primary disabled"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #6`] = `
<div
  data-role="quick-integration-modal"
  class="modal-dialog modal-lg"
  role="document"
>
  <div class="modal-content">
    <div class="modal-header">
      <h5 class="modal-title">Secure a Payload</h5>
      <span id="" class="cursor-pointer"><i class="fa-times fas"></i></span>
    </div>
    <div class="modal-body">
      <div>
        <h4 class="mb-3">
          Select the fields that you want to Redact<sup
            ><span
              ><span id="popoverid_1"
                ><i class="fa-info-circle fas"></i
              ></span> </span></sup
          >or Reveal<sup
            ><span
              ><span id="popoverid_2"
                ><i class="fa-info-circle fas"></i
              ></span> </span
          ></sup>
        </h4>
        <div>
          <div>
            <ul class="css-5q6xdk">
              <li class="css-79elbk">
                <div>
                  <input
                    name="isGoing"
                    type="checkbox"
                    readonly=""
                    checked=""
                  />
                  <div
                    title="$.foo"
                    data-role="checkbox-text"
                    class="w-95 text-word-break"
                    style="display: inline-block; vertical-align: top; color: inherit; padding-left: 10px; cursor: pointer;"
                  >
                    foo: bar
                  </div>
                </div>
                <div><ul class="css-1s1o8u8" style="display: block;"></ul></div>
              </li>
            </ul>
            <div class="mt-3">
              <div class="row">
                <div class="col-lg-6 col-sm-4">Transformer</div>
                <div class="col-lg-6">
                  <div class="payload-wrapper">
                    Operation &nbsp;<span
                      ><span id="popoverid_3"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                  <div class="payload-wrapper">
                    Storage &nbsp;<span
                      ><span id="popoverid_4"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                  <div class="payload-wrapper">
                    Format &nbsp;<span
                      ><span id="popoverid_5"
                        ><i class="fa-info-circle fas"></i
                      ></span>
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <div class="row mt-2">
                  <div class="col-lg-6 col-sm-4">
                    <div class="string-wrapper">
                      <span class="path-wrapper-undefined">$.foo</span>
                    </div>
                  </div>
                  <div class="col-lg-6">
                    <div class="payload-wrapper">
                      <select
                        ><option value="REDACT">Redact</option
                        ><option value="ENRICH">Reveal</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="PERSISTENT">Persistent</option
                        ><option value="VOLATILE">Volatile</option></select
                      >
                    </div>
                    <div class="payload-wrapper">
                      <select
                        ><option value="UUID"
                          >Generic - VGS Alias (Default) </option
                        ><option value="NUM_LENGTH_PRESERVING"
                          >Generic - Numeric Length Preserving </option
                        ><option value="FPE_SIX_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (6T4) </option
                        ><option value="FPE_T_FOUR"
                          >Payment Card - Format Preserving, Luhn Valid (T4) </option
                        ><option value="PFPT"
                          >Payment Card - Prefixed, Luhn Valid, 19 Digits Fixed
                          Length </option
                        ><option value="NON_LUHN_FPE_ALPHANUMERIC"
                          >Payment Card - Format Preserving - Non Luhn Valid </option
                        ><option value="FPE_SSN_T_FOUR"
                          >SSN - Format Preserving (A4) </option
                        ><option value="FPE_ACC_NUM_T_FOUR"
                          >Account Number - Numeric Length Preserving (A4) </option
                        ><option value="FPE_ALPHANUMERIC_ACC_NUM_T_FOUR"
                          >Account Number - Alphanumeric Length Preserving (A4) </option
                        ><option value="GENERIC_T_FOUR"
                          >Generic - VGS Alias Last Four (T4) </option
                        ><option value="RAW_UUID"
                          >Generic - UUID
                        </option></select
                      >
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div class="mt-5 text-center">
              <button
                type="button"
                data-role="select-secure-payload"
                class="button-next btn btn-primary"
              >
                Secure this payload
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Localhoste upload single har flow > Visits Localhoste and gets 2 yamls from uploaded har file #7`] = `
<div
  class="stepper-rows text-primary-light mb-4"
  data-role="whats-next-stepper"
>
  <div class="stepper-row current-step text-accent">
    <span class="circle"
      ><i aria-label="icon: check" class="anticon anticon-check"
        ><svg
          viewBox="64 64 896 896"
          focusable="false"
          class=""
          data-icon="check"
          width="1em"
          height="1em"
          fill="currentColor"
          aria-hidden="true"
        >
          <path
            d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
          ></path></svg></i
    ></span>
    <p>Your <strong>route</strong> has been created</p>
  </div>
  <div class="stepper-row">
    <span class="circle">2</span>
    <p>
      Create
      <a href="https://dashboard.verygoodsecurity.com" target="_blank"
        >VGS Account</a
      >
    </p>
  </div>
  <div class="stepper-row">
    <span class="circle">3</span>
    <p>
      <a
        href="https://www.verygoodsecurity.com/docs/features/yaml#import-a-single-route"
        target="_blank"
        >Import your route</a
      >
      to the VGS Dashboard or use the
      <a href="https://www.verygoodsecurity.com/docs/cli/index" target="_blank"
        >VGS CLI</a
      >
      to complete your integration.
    </p>
  </div>
</div>
`;
